fixed overflow issues on whole app

--- a/src/app/features/about-component/about-component.scss
+++ b/src/app/features/about-component/about-component.scss
@@ -2,6 +2,7 @@
   padding: 100px 1.5rem;
   position: relative;
   z-index: 1;
+  overflow-x: hidden;
 
   @media (min-width: 768px) {
     padding: 100px 3rem;
